# test_domotic_project

Progetto_Domotica-main/: test.cpp
Progetto_Domotica-main/include/: ControlSystem.h  Device.h  Manual.h
Progetto_Domotica-main/src/: ControlSystem.cpp  Device.cpp  Manual.cpp  ProgrammedCycle.cpp  dispositivi.txt  main.cpp
test_domotic_project-main/Progetto_Domotica-main/include/: ControlSystem.h
test_domotic_project-main/Progetto_Domotica-main/src/: ControlSystem.cpp  Device.cpp  Manual.cpp  ProgrammedCycle.cpp  dispositivi.txt
test_domotic_project_finale/Progetto_Domotica-main/: CMakeLists.txt
test_domotic_project_finale/Progetto_Domotica-main/include/: ControlSystem.h  Device.h  Manual.h  ProgrammedCycle.h
test_domotic_project_finale/Progetto_Domotica-main/src/: ControlSystem.cpp  Device.cpp  Manual.cpp  ProgrammedCycle.cpp  main.cpp
